--- a/views/home.ejs
+++ b/views/home.ejs
@@ -13,8 +13,8 @@
         <div class="container mt-4">
             <div class="row">
                 <% blogs.forEach(blog => { %>
-                    <div class="col-md-3 mb-4"> <!-- Each column takes 1/4th space -->
-                        <div class="card h-100" style="width: 100%;"> <!-- Make card fill the column width -->
+                    <div class="col-md-3 mb-4"> 
+                        <div class="card h-100" style="width: 100%;">
                             <img src="<%= blog.coverImage %>" class="card-img-top" alt="..." style="width: 100%; height: 150px; object-fit: cover;">
                             <div class="card-body">
                                 <h5 class="card-title"><%= blog.title %></h5>
